# CodeIndexer

./: .gitignore  CHEATSHEET.md  README.md  add_codeidx_repo_to_path.bat  full_scan.bat  full_update_scan.bat  pyproject.toml  reindex.bat  reindex_billing.bat  scan.bat  scan_full.bat  scan_obsidian.bat  scan_obsidian_string_literals.bat  update_scan.bat
.cursor/skills/codeidx/: SKILL.md
.cursor/skills/codeidx-sqlite/: SKILL.md
docs/: AGENTS_AND_HOOKS.md  CHEATSHEET.md  TRADEOFFS.md  example_queries.sql
scripts/: add_codeidx_repo_to_path.ps1
src/codeidx/: __init__.py  __main__.py  features.py  layers.py  mcp_sqlite.py  mvvm_edges.py  notes.py  paths.py  storage.py
src/codeidx/agents/: __init__.py  claude_setup.py  cursor_setup.py  json_util.py  mcp_spec.py
src/codeidx/cli/: __init__.py  hook_cmd.py  init_agents_cmd.py  main.py  mcp_cmd.py  obsidian.py  query_cmd.py
src/codeidx/db/: __init__.py  connection.py  schema.sql
src/codeidx/indexer/: __init__.py  ignore.py  pipeline.py  symbol_index.py  walk.py
src/codeidx/languages/: __init__.py  base.py  csharp.py
src/codeidx/mvvm_ui/: __init__.py  generic_xaml.py
src/codeidx/projects/: __init__.py  msbuild.py
tests/: __init__.py  test_cross_solution.py  test_features.py  test_index_perf.py  test_init_agents.py  test_injects.py  test_layers.py  test_mcp_notes.py  test_mvvm_edges.py  test_notes.py  test_obsidian.py  test_paths.py  test_sln.py  test_smoke.py  test_string_ref.py
tests/fixtures/: sample.cs
tests/fixtures/cross_sln/: cross_sln.sln
tests/fixtures/cross_sln/App/: App.csproj  MyobIntegrationTarget.cs
tests/fixtures/string_ref/: StringRefFixture.cs
(+3 files in other folders)
