[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeidx"
version = "0.2.5"
description = "SQLite codebase intelligence indexer with FTS5 and graph edges"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pathspec>=0.12",
    "tree-sitter>=0.21.0,<0.22",
    "tree-sitter-languages>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
codeidx = "codeidx.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codeidx = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::FutureWarning:tree_sitter",
]
